@@ -10,8 +10,8 @@ use Test::NoWarnings;
 # Test.
 my $obj = Acme::CPANAuthors->new('Czech');
 my @ret = $obj->id;
-my @right_ret = ('CHOROBA', 'DANPEDER', 'HIHIK', 'HPA', 'JANPAZ', 'JANPOM',
-	'JENDA', 'JSPICAK', 'KLE', 'MAJLIS', 'MILSO', 'MJFO', 'PAJAS', 'PASKY',
-	'PEK', 'POPEL', 'RUR', 'RVASICEK', 'SKIM', 'SMRZ', 'STRAKA', 'TKR',
-	'TRIPIE', 'ZEMAN', 'ZOUL');
+my @right_ret = ('CHOROBA', 'DANIELR', 'DANPEDER', 'HIHIK', 'HPA', 'JANPAZ',
+	'JANPOM', 'JENDA', 'JSPICAK', 'KLE', 'MAJLIS', 'MILSO', 'MJFO',
+	'PAJAS', 'PASKY', 'PEK', 'POPEL', 'RUR', 'RVASICEK', 'SKIM', 'SMRZ',
+	'STRAKA', 'TKR', 'TRIPIE', 'ZEMAN', 'ZOUL');
 is_deeply(\@ret, \@right_ret, 'CPAN authors ids.');
