@@ -1,4 +1,5 @@
 0.12
+ - Add DANIELR CPAN account.
  - Fix LICENSE file.
 
 0.11 2014-08-07T18:20:21+02:00
